<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coolColor"
    android:orientation="vertical"
    tools:context=".activities.InformationActivity">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appImg"
        android:minHeight="100dp"
        android:src="@color/colorPrimaryDark" />


    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tempAppName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/rateImg"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:contentDescription="@string/rateImg"
            android:src="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rateTxt" />

        <TextView
            android:id="@+id/categoryTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tempCategory"
            android:textColor="#800"
            app:layout_constraintEnd_toStartOf="@id/rateImg"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tempAppDesc"
            app:layout_constraintEnd_toStartOf="@id/rateImg"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryTxt" />

        <TextView
            android:id="@+id/isHomeScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeScreen"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/countTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempRateCount"
            app:layout_constraintEnd_toEndOf="@id/rateImg"
            app:layout_constraintTop_toBottomOf="@id/rateImg" />

        <TextView
            android:id="@+id/rateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempRate"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/rateImg"
            app:layout_constraintStart_toStartOf="@id/rateImg" />

        <TextView
            android:id="@+id/minOsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minOsVersion"
            app:layout_constraintStart_toStartOf="@id/rateImg"
            app:layout_constraintTop_toBottomOf="@id/countTxt" />

        <TextView
            android:id="@+id/bidRateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempBidRate"
            app:layout_constraintStart_toStartOf="@id/rateImg"
            app:layout_constraintTop_toBottomOf="@id/minOsTxt" />

        <Button
            android:id="@+id/actionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/action_btn"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/tempCallAction"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
